clean up simple code smells